--- a/src/sass/userCarChart.scss
+++ b/src/sass/userCarChart.scss
@@ -1,8 +1,13 @@
 .UserCarChart {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); // Three equal columns
+  grid-gap: 1rem; // Space between the charts
   justify-content: center;
   align-items: center;
   margin: 10% auto;
-  max-width: 80%;
-  flex-direction: column;
+  max-width: 30%; // Adjust as needed
+  // For smaller screens, you might want to adjust the grid layout
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr; // One column for smaller screens
+  }
 }
