--- a/src/sass/_addNewCard.scss
+++ b/src/sass/_addNewCard.scss
@@ -5,12 +5,11 @@
   display: flex;
   max-width: 50rem;
   min-height: 22rem;
-  margin-top: 9%;
-  margin-left: 2%;
+  margin: 5% 2%;
   align-items: center;
   border-radius: 4rem;
   justify-content: center;
-  
+
   // Add other styles as needed
 
   &__icon {
