--- a/src/sass/_carCard.scss
+++ b/src/sass/_carCard.scss
@@ -1,11 +1,9 @@
 .car-card {
   background-color: $color-card;
+  display: flex;
+  align-items: center;
   width: 100%;
   margin: 5% 2%;
-  display: flex;
-  flex-direction: row; // Change to row for horizontal layout
-  align-items: center; // Vertically center items
-  justify-content: start; // Align items to the start of the container
   max-width: 50rem;
   min-height: 22rem;
   border-radius: 4rem;
@@ -15,44 +13,24 @@
   padding: 2rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
-  // Icon for adding more information or redirect
-  &__icon {
-    font-size: 9.6rem;
+  &__name {
     color: $color-white;
+    font-size: 3rem;
     font-weight: bold;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-    margin-right: 2rem; // Add margin to the right of the icon
-
-    &:hover {
-      transform: scale(1.1);
-    }
-
-    &:active {
-      transform: scale(0.9);
-    }
+    text-decoration: none;
+    margin-right: 4rem; // Add some space between the name and the details
   }
 
-  // Style for car details (Text Container)
   &__details {
     display: flex;
-    flex-direction: column; // Arrange details vertically
+    flex-direction: column;
     align-items: flex-start; // Align text to the start (left)
     text-align: left;
-    width: calc(
-      100% - 12rem
-    ); // Adjust width to account for the icon width and margin
-
-    &--make,
-    &--model,
-    &--year,
-    &--vin {
-      margin: 0.5rem 0;
-    }
+    font-size: 2.5rem; // Your specified font size for details
+    gap: 0.2rem;
   }
+}
 
-  &__name {
-    font-size: 2.4rem;
-    margin-bottom: 1rem;
-  }
+.car-card__detail {
+  margin-bottom: 1rem; // Spacing between each detail
 }
