--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -16,6 +16,7 @@
   background-color: #6a8eae;
   color: #fff;
   font-weight: bold;
+  padding: 3rem;
 
   // Styles for the footer sections
   .footer-section {
