--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -11,10 +11,11 @@
   background-color: rgba(255, 255, 255, 1);
   display: grid;
   place-items: center;
-  height: 10rem;
+  height: fit-content;
 }
 
 .navbar {
+  background-color: rgba(255, 255, 255, 1);
   width: 100%;
   display: grid; // Using grid for main navbar layout
   grid-template-columns: repeat(
@@ -24,7 +25,7 @@
   height: 5rem;
   justify-content: space-between;
   border: 1px solid var(--color-secondary);
-  margin-top: 1rem;
+  margin-top: 0rem;
   font-size: 3.2rem;
   font-weight: 600;
 }
@@ -49,6 +50,7 @@
   }
 
   img {
+    height: 2.3rem;
     margin-right: 1rem; /* spacing between icon and text */
   }
 
