--- a/src/sass/_myProfile.scss
+++ b/src/sass/_myProfile.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  margin: 10% auto;
+  margin-top: 3%; // Center the component in the viewport
   font-weight: inherit;
 
   &__card {
