--- a/src/sass/_info.scss
+++ b/src/sass/_info.scss
@@ -45,10 +45,8 @@
 
   &__content {
     // width: 100%;
-    min-width: 150rem;
+    min-width: 100%;
     margin: 0 auto; // Centers the content block
-    margin-right: 150px;
-    margin-left: 150px;
     padding: 1rem; // Adds padding within the content block
     // box-shadow: 0 0.4rem 2rem rgba(0, 0, 0, 0.1); // Example shadow
 
