--- a/src/sass/_login.scss
+++ b/src/sass/_login.scss
@@ -14,25 +14,25 @@
 
 // style the login container
 .login {
-  position: absolute;
-  top: 57%;
-  left: 50%;
-  min-width: 51.9rem;
   font-family: inherit;
-  min-height: 51.7rem;
+  max-width: 34%;
+  min-height: 40%;
+  margin-top: 2.1%;
+  margin-left: 33%;
   border-radius: 4rem;
   background-color: var(--color-login);
-  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 5%;
 
   // use nesting to style the elements inside the login container
   &__title {
     font-weight: 600;
     flex-grow: 0.1;
     font-size: 4rem;
+    padding: 1rem;
     color: var(--color-white);
   }
 
@@ -137,14 +137,3 @@
   }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1920px) {
-  .login {
-    top: 50%; // Adjust top position
-    min-height: auto; // Remove min-height to allow natural height
-    padding: 2rem; // Add some padding inside the container
-    transform: translate(
-      -50%,
-      -30%
-    ); // Adjust vertical translate to bring the component down
-  }
-}
