--- a/src/sass/_subscription.scss
+++ b/src/sass/_subscription.scss
@@ -4,6 +4,7 @@
   align-items: center; // Center the cards vertically
   flex-wrap: wrap; // Allow the cards to wrap onto the next line if there isn't enough space
   margin-top: 3%;
+  margin-bottom: 5%;
   padding: 0%;
 
   .subscription-card {
@@ -20,7 +21,7 @@
     color: #fff;
     width: 100%; // Make the width responsive
     max-width: 38rem;
-    min-height: 50rem;
+    min-height: 45rem;
     align-items: center;
     box-sizing: border-box; // Include padding and border in the element's total width and height
 
