--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,3 +8,4 @@ $color-shadow-dark: rgba(0, 0, 0, 0.3);
 $color-shadow-light: rgba(0, 0, 0, 0.06);
 $font-size-list: 2rem;
 $background-color-dark: #b9c9b7;
+$new-color-primary: #9fbcc7;
